--- a/1、WechatApplet-PaiMai/app.json
+++ b/1、WechatApplet-PaiMai/app.json
@@ -37,8 +37,8 @@
       {
         "pagePath": "pages/news/news",
         "text": "消息",
-        "iconPath": "icon/tabBar/news.png",
-        "selectedIconPath": "icon/tabBar/news1.png"
+        "iconPath": "icon/tabBar/news1.png",
+        "selectedIconPath": "icon/tabBar/news.png"
       },
       {
         "pagePath": "pages/My/My",
