1、新增了测试上传图片的page 2、微信小程序.md 文件中将今日学习的内容进行记录

--- a/1、WechatApplet-PaiMai/app.json
+++ b/1、WechatApplet-PaiMai/app.json
@@ -5,7 +5,8 @@
     "pages/DetailPage/DetailPage",
     "pages/pm/pm",
     "pages/release_new/release_new",
-    "pages/news/news"
+    "pages/news/news",
+    "pages/test/test"
   ],
   "window": {
     "navigationBarBackgroundColor": "#afb4db",
