暂时完成了发布页面的布局

--- a/1、WechatApplet-PaiMai/app.json
+++ b/1、WechatApplet-PaiMai/app.json
@@ -6,7 +6,8 @@
     "pages/pm/pm",
     "pages/release_new/release_new",
     "pages/news/news",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/loginTest/loginTest"
   ],
   "window": {
     "navigationBarBackgroundColor": "#afb4db",
